--- a/0x00-html_advanced/10-index.html
+++ b/0x00-html_advanced/10-index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
 <meta charset="utf-8">
-<meta name='viewport' content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+<meta name='viewport' content='width=device-width, initial-scale=1.0, viewport-fit=cover'>
 <title>Homepage - Techium</title>
 <meta name="description" content="Techium is a digital agency">
 <link rel="icon" type="image/x-icon" href="./favicon.ico">
@@ -32,10 +32,10 @@
 <h3>Interior Design</h3>
 </article>
 <article>
-<h3>Personal Brand</h3>
+<h3>Web Development</h3>
 </article>
 <article>
-<h3>Web Development</h3>
+<h3>Personal Brand</h3>
 </article>
 </section>
 <section>
