--- a/0x00-html_advanced/15-index.html
+++ b/0x00-html_advanced/15-index.html
@@ -113,7 +113,9 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum neg
 </section>
 </main>
 <footer>
+<div>
 Footer
+</div>
 </footer>
 </body>
 </html>
