--- a/0x00-html_advanced/29-index.html
+++ b/0x00-html_advanced/29-index.html
@@ -150,15 +150,15 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid e
 <div>
 <article>
 <blockquote>I am completely blown away. Thanks to Techium, we've just launched our 5th website!</blockquote>
-<p>— Yuri Y.</p>
+<p>Yuri Y.</p>
 </article>
 <article>
 <blockquote>Thank you so much for your help. Techium company is awesome!</blockquote>
-<p>— Dorrie S.</p>
+<p>Dorrie S.</p>
 </article>
 <article>
 <blockquote>I love your system. Definitely worth the investment. I'd be lost without Techium company.</blockquote>
-<p>— Sven H.</p>
+<p>Sven H.</p>
 </article>
 </div>
 </div>
